--- a/TicketsControl/tickets/templates/administracion/admin.html
+++ b/TicketsControl/tickets/templates/administracion/admin.html
@@ -1,11 +1,35 @@
 {% extends 'base.html' %}
+{% load static %}
 {% block nav_header %}
 {% include 'componentes/navbarheader.html' %}
 {% endblock %}
+{% block background %}
+
+<div class="fondoFigura">
+    <div class="imgFondo"></div>
+</div>
+
+<style>
+    .fondoFigura {
+        width: 100%;
+    }
+    .imgFondo{
+        background: url('{% static "img/iStock6.jpg" %}') no-repeat;
+        -webkit-background-size: cover;
+        -moz-background-size: cover;
+        -o-background-size: cover;
+        background-size: cover;
+        height: 500px;
+        clip-path: polygon(0 0, 100% 0, 100% 77%, 0% 100%);
+    }
+</style>
+
+{% endblock background %}
 {% block content %}
 <div class="container mt-5">
     <!-- Example row of columns -->
     <div class="row">
+        <h5 class="tituloG mb-5">GESTIÓN DE DEPARTAMENTOS</h5>
         <div class="col-md-6" style="text-align: center;">
             <h2 class="titulo">DEPARTAMENTOS</h2>
             <table id="record-table" style="height: 100px;" class="table table-hover table-fixed-height">
@@ -223,6 +247,12 @@
         .titulo {
             font-size: 35px;
             font-weight: 700;
+            color: #000000;
+        }
+        .tituloG{
+            text-align: end;
+            font-size: 40px;
+            font-weight: 900;
             color: #000000;
         }
 
